# ddns-monitor

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: publish.yml
doc/: Instructions.md  ddns-monitor-install.cmd  ddns-monitor.service  io.ClickOneTwo.ddns-monitor.plist
src/: configure.rs  lib.rs  main.rs  monitor.rs
