[package]
name = "ddns-monitor"
authors = ["Daniel Brotsky <dan@clickonetwo.io>"]
description = "A service to monitor changes in dynamic DNS addresses"
license = "MIT"
version = "0.3.2"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11.0"
directories = "5"
dns-lookup = "2"
eyre = "0.6"
gethostname = "0.4"
lettre = "0.11.1"
local-ip-address = "0.5"
mac_address = "1"
magic-crypt = "3"
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"

[build-dependencies]
mac_address = "1"
